# accro-sentiment

./: .env.example  .gitignore  .gitleaks.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: __init__.py
docs/: BACKLOG.md  CHANGELOG.md  SPRINT_PLAN.md  TECH_DEBT.md
src/: __init__.py  main.py
tests/: __init__.py  test_main.py
