[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accro-sentiment"
version = "0.1.0"
description = "AI-native sentiment analysis for ACCRO product reviews"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crawl4ai>=0.3.72",
    "playwright>=1.40.0",
    "openai>=1.0.0",
    "langchain>=0.1.0",
    "fastapi>=0.104.0",
    "streamlit>=1.28.0",
    "duckdb>=0.9.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"